--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
     "react-router": "^7.13.0",
     "react-slick": "0.31.0",
     "recharts": "2.15.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "shiki": "^3.22.0",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
