--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ VITE_SUPABASE_URL=your-project-url
 # Your Supabase anon/public key
 # Can be found in: https://app.supabase.com/project/[PROJECT_ID]/settings/api
 VITE_SUPABASE_ANON_KEY=your-anon-key
+
+# Admin Dashboard Password
+# Set a secure password to protect the admin dashboard
+VITE_ADMIN_PASSWORD=your-admin-password
