--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://CloudTide4746.github.io/CloudTideBlog",
   "scripts": {
     "build": "vite build",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -75,10 +76,16 @@
     "vaul": "1.1.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@tailwindcss/vite": "4.1.12",
     "@vitejs/plugin-react": "4.7.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
     "gh-pages": "^6.3.0",
+    "globals": "^17.3.0",
     "tailwindcss": "4.1.12",
+    "typescript-eslint": "^8.56.0",
     "vite": "6.3.5"
   },
   "pnpm": {
